--- a/css/style.css
+++ b/css/style.css
@@ -55,7 +55,7 @@
     background-image: url(../img/background-secrion.png);
     -webkit-background-size:cover;
     background-size: cover;
-    background-position: center;
+    /*background-position: center;*/
     background-repeat: no-repeat;
     position: relative;
     margin-bottom: 100px;
@@ -78,7 +78,7 @@
 }
 
 .small-rectangle{
-    margin-left: 85px;
+    margin-left: 70px;
     padding-bottom: 7px;
     padding-top: 7px;
     text-transform: capitalize;
@@ -101,6 +101,7 @@
 .adout-us-title{
     width: 75%;
     margin: 0 auto;
+    font-size: 18px;
 }
 
 .cards-container{
@@ -137,7 +138,13 @@
 .map{
     border: 5px solid #ED1260;
     box-sizing: border-box;
-    margin: 0 15px;
+    margin: 0 auto;
+    max-width: 600px;
+}
+@media (max-width: 614px) {
+    .map{
+        margin: 0 15px;
+    }
 }
 
 .map-img-container{
@@ -179,9 +186,10 @@
 .contacts-item{
     display: flex;
     flex-wrap: wrap;
+    align-items: center;
     margin: 0 auto;
     margin-bottom: 25px;
-    width: 100%;
+    width: 220px;
 }
 
 .contacts-info{
@@ -193,6 +201,10 @@
     height: 100%;
 }
 
+.contacts-item-info{
+    display: none;
+}
+
 .contacts-info-item{
     margin-bottom: 5px;
 }
@@ -202,7 +214,6 @@
 }
 
 .contacts-img{
-    width: 30%;
     height: 100%;
     display: flex;
     justify-content: flex-end;
